--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -1,2 +1,12 @@
+//Reescribir variables de bootstrap
+$rojo: #f34f51;
+$verde: #0098AE;
+$oscuro: #212121;
+
+//Asignar paleta de colores a Bootstrap
+$primary : $rojo;
+$secondary : $verde;
+$dark: $oscuro;
+
 //importar Bootstrap
-@import '../../node_modules/bootstrap/scss/bootstrap.scss'
+@import '../../node_modules/bootstrap/scss/bootstrap.scss';
