--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -8,5 +8,7 @@ $primary : $rojo;
 $secondary : $verde;
 $dark: $oscuro;
 
+//Tipografia
+$display-font-weight: 900;
 //importar Bootstrap
 @import '../../node_modules/bootstrap/scss/bootstrap.scss';
