--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -1,20 +1,20 @@
 //Reescribir variables de bootstrap
 $rojo: #f34f51;
-$verde: #0098AE;
+$verde: #0098ae;
 $oscuro: #212121;
 $gris: #b5b5b5;
 
 //Asignar paleta de colores a Bootstrap
-$primary : $rojo;
-$secondary : $verde;
-$dark : $oscuro;
+$primary: $rojo;
+$secondary: $verde;
+$dark: $oscuro;
 
 //Tipografia
 $display-font-weight: 900;
 $heading-font-weight: 700;
 
 //Nav Link
-$nav-link-padding-x:0;
+$nav-link-padding-x: 0;
 $nav-link-color: $gris;
 $nav-link-hover-color: darken($gris, 10%);
 
@@ -22,4 +22,4 @@ $nav-link-hover-color: darken($gris, 10%);
 $card-border-color: trasnparent;
 
 //importar Bootstrap
-@import '../../node_modules/bootstrap/scss/bootstrap.scss';
+@import "../../node_modules/bootstrap/scss/bootstrap.scss";
