--- a/src/scss/header/_header.scss
+++ b/src/scss/header/_header.scss
@@ -1,14 +1,13 @@
-@use '../custom' as *;
+@use "../custom" as *;
 
 .header {
-    padding-top: 3rem;
-    padding-bottom: 3rem;
-    @include media-breakpoint-up(md) {
-        padding-top: 10rem;
-        padding-bottom: 10rem;
-    }
-    
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+  @include media-breakpoint-up(md) {
+    padding-top: 10rem;
+    padding-bottom: 10rem;
+  }
 }
 .logo {
-    width:10rem;
+  width: 10rem;
 }
